--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       PrivateAdmin: ${{ steps.filter.outputs.PrivateAdmin }}
+      Navigation: ${{ steps.filter.outputs.Navigation }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -24,6 +25,9 @@ jobs:
             PrivateAdmin:
               - .github/workflows/**
               - 'src/PrivateAdmin/**'
+            Navigation:
+              - .github/workflows/**
+              - 'src/Navigation/**'
   PrivateAdmin_Build:
     runs-on: ubuntu-latest
     needs: PathsFilter
@@ -76,3 +80,49 @@ jobs:
           password: ${{ secrets.SSH_Password }}
           port: 22
           script: echo '${{ secrets.SSH_Password }}' | sudo -S /scripts/podman-reload.py grillbot-web
+  Navigation_Check:
+    runs-on: ubuntu-latest
+    needs: PathsFilter
+    if: needs.PathsFilter.outputs.Navigation == 'true'
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Check HTML
+        uses: Cyb3r-Jak3/html5validator-action@v7.2.0
+        with:
+          root: src/Navigation/
+          css: true
+  Navigation_BuildContainer:
+    runs-on: ubuntu-latest
+    needs: Navigation_Check
+    if: github.ref == 'refs/heads/master'
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Log in to the container repository
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build container
+        run: docker build -t ghcr.io/grillbot/grillbot.web:navigation src/Navigation
+      - name: Push container
+        run: docker push ghcr.io/grillbot/grillbot.web:navigation
+  Navigation_Deploy_Production:
+    runs-on: ubuntu-latest
+    environment: "Production_Navigation"
+    needs: Navigation_BuildContainer
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - name: Execute deployment on SSH
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_Username }}
+          password: ${{ secrets.SSH_Password }}
+          port: 22
+          script: echo '${{ secrets.SSH_Password }}' | sudo -S /scripts/podman-reload.py grillbot-navigation
