--- a/src/PrivateAdmin/package.json
+++ b/src/PrivateAdmin/package.json
@@ -7,7 +7,7 @@
         "build": "ng build",
         "prod": "ng build --configuration=production",
         "test": "ng build --configuration=test",
-        "lint": "eslint -c .eslintrc.js --ext .ts ."
+        "lint": "eslint -c .eslintrc.json --ext .ts ."
     },
     "private": true,
     "dependencies": {
@@ -45,9 +45,9 @@
         "@typescript-eslint/eslint-plugin-tslint": "~5.25.0",
         "@typescript-eslint/parser": "~5.25.0",
         "codelyzer": "~6.0.2",
-        "eslint": "~8.16.0",
-        "eslint-plugin-import": "~2.26.0",
-        "eslint-plugin-jsdoc": "~39.3.0",
+        "eslint": "~8.36.0",
+        "eslint-plugin-import": "~2.27.5",
+        "eslint-plugin-jsdoc": "~40.1.0",
         "eslint-plugin-prefer-arrow": "~1.2.3",
         "ts-node": "~10.7.0",
         "tslint": "~6.1.3",
