--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -152,6 +152,8 @@ jobs:
           node-version: "16"
       - name: Install dependencies
         run: npm ci
+      - name: Lint
+        run: npm run lint
       - name: Production build
         run: npm run build
   PublicAdmin_BuildContainer:
