--- a/src/PublicAdmin/package.json
+++ b/src/PublicAdmin/package.json
@@ -7,7 +7,7 @@
         "build": "ng build",
         "prod": "ng build --configuration=production",
         "test": "ng build --configuration=test",
-        "lint": "eslint -c .eslintrc.js --ext .ts ."
+        "lint": "eslint -c .eslintrc.json --ext .ts ."
     },
     "private": true,
     "dependencies": {
@@ -38,12 +38,12 @@
         "@typescript-eslint/eslint-plugin-tslint": "^5.3.0",
         "@typescript-eslint/parser": "^5.3.0",
         "codelyzer": "^6.0.0",
-        "eslint": "^8.2.0",
-        "eslint-plugin-import": "^2.25.2",
-        "eslint-plugin-jsdoc": "^37.0.3",
+        "eslint": "^8.36.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-jsdoc": "^40.1.0",
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "ts-node": "~8.3.0",
-        "tslint": "~6.1.0",
+        "tslint": "~6.1.3",
         "typescript": "~4.5.5"
     }
 }
