--- a/src/PrivateAdmin/nginx.conf
+++ b/src/PrivateAdmin/nginx.conf
@@ -19,6 +19,9 @@ http {
         server_name localhost;
         root /usr/share/nginx/html;
         index index.html;
+        server_tokens off;
+        add_header X-Frame-Options SAMEORIGIN;
+        add_header X-Content-Type-Options nosniff;
 
         location / {
             try_files $uri $uri/ /index.html;
