--- a/src/KarmaWeb/Dockerfile
+++ b/src/KarmaWeb/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:16-alpine as AngularBuild
+
 WORKDIR /usr/src/app
 COPY package.json package-lock.json ./
 RUN npm install
@@ -6,6 +7,9 @@ COPY . .
 RUN npm run ng -- build --configuration=production
 
 FROM nginx:alpine
-LABEL org.opencontainers.image.source https://github.com/grillbot/karma-web
+EXPOSE 80
+
+LABEL org.opencontainers.image.source https://github.com/grillbot/grillbot.web
+
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY --from=AngularBuild /usr/src/app/dist/web /usr/share/nginx/html
