--- a/src/PublicAdmin/package.json
+++ b/src/PublicAdmin/package.json
@@ -1,47 +1,47 @@
 {
-    "name": "grill-bot-public-client",
-    "version": "0.0.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "prod": "ng build --configuration=production",
-        "test": "ng build --configuration=test",
-        "lint": "eslint -c .eslintrc.json --ext .ts ."
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/common": "~13.2.1",
-        "@angular/compiler": "~13.2.2",
-        "@angular/core": "~13.2.1",
-        "@angular/forms": "~13.2.1",
-        "@angular/platform-browser": "~13.2.1",
-        "@angular/platform-browser-dynamic": "~13.2.1",
-        "@angular/router": "~13.2.1",
-        "rxjs": "~6.6.0",
-        "tslib": "^2.0.0",
-        "zone.js": "~0.11.4",
-        "@fortawesome/fontawesome-free": "^5.15.4",
-        "jwt-decode": "~3.1.2",
-        "moment": "~2.29.4",
-        "bootstrap": "5.1.3",
-        "@ng-select/ng-select": "8.1.1"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~13.3.10",
-        "@angular/cli": "~13.2.1",
-        "@angular/compiler-cli": "~13.2.1",
-        "@types/node": "^12.11.1",
-        "@typescript-eslint/eslint-plugin": "^5.3.0",
-        "@typescript-eslint/eslint-plugin-tslint": "^5.3.0",
-        "@typescript-eslint/parser": "^5.3.0",
-        "codelyzer": "^6.0.0",
-        "eslint": "^8.36.0",
-        "eslint-plugin-import": "^2.27.5",
-        "eslint-plugin-jsdoc": "^40.1.0",
-        "eslint-plugin-prefer-arrow": "^1.2.3",
-        "ts-node": "~8.3.0",
-        "tslint": "~6.1.3",
-        "typescript": "~4.5.5"
-    }
+  "name": "grill-bot-public-client",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "prod": "ng build --configuration=production",
+    "test": "ng build --configuration=test",
+    "lint": "eslint -c .eslintrc.json --ext .ts ."
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/common": "^14.3.0",
+    "@angular/compiler": "^14.3.0",
+    "@angular/core": "^14.3.0",
+    "@angular/forms": "^14.3.0",
+    "@angular/platform-browser": "^14.3.0",
+    "@angular/platform-browser-dynamic": "^14.3.0",
+    "@angular/router": "^14.3.0",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.4",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "jwt-decode": "~3.1.2",
+    "moment": "~2.29.4",
+    "bootstrap": "5.1.3",
+    "@ng-select/ng-select": "8.1.1"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^14.2.11",
+    "@angular/cli": "^14.2.11",
+    "@angular/compiler-cli": "^14.3.0",
+    "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "codelyzer": "^6.0.0",
+    "eslint": "^8.36.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsdoc": "^40.1.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.3",
+    "typescript": "~4.8.4"
+  }
 }
