Upgrade to Angular15

--- a/src/PublicAdmin/angular.json
+++ b/src/PublicAdmin/angular.json
@@ -60,7 +60,8 @@
                         "optimization": false,
                         "namedChunks": true,
                         "allowedCommonJsDependencies": [
-                            "jwt-decode"
+                            "jwt-decode",
+                            "moment"
                         ]
                     },
                     "configurations": {
