Upgrade to Angular 15

--- a/src/PrivateAdmin/angular.json
+++ b/src/PrivateAdmin/angular.json
@@ -60,7 +60,7 @@
                         "optimization": false,
                         "namedChunks": true,
                         "allowedCommonJsDependencies": [
-                            "jwt-decode"
+                            "jwt-decode", "filesize", "moment", "file-saver"
                         ]
                     },
                     "configurations": {
