--- a/src/PrivateAdmin/package.json
+++ b/src/PrivateAdmin/package.json
@@ -11,13 +11,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^14.3.0",
-    "@angular/compiler": "^14.3.0",
-    "@angular/core": "^14.3.0",
-    "@angular/forms": "^14.3.0",
-    "@angular/platform-browser": "^14.3.0",
-    "@angular/platform-browser-dynamic": "^14.3.0",
-    "@angular/router": "^14.3.0",
+    "@angular/common": "^15.2.9",
+    "@angular/compiler": "^15.2.9",
+    "@angular/core": "^15.2.9",
+    "@angular/forms": "^15.2.9",
+    "@angular/platform-browser": "^15.2.9",
+    "@angular/platform-browser-dynamic": "^15.2.9",
+    "@angular/router": "^15.2.9",
     "rxjs": "~7.5.5",
     "tslib": "~2.4.0",
     "zone.js": "~0.11.5",
@@ -25,18 +25,20 @@
     "jwt-decode": "~3.1.2",
     "moment": "~2.29.4",
     "bootstrap": "~5.2.3",
-    "ngx-filesize": "~2.0.16",
+    "ngx-filesize": "~3.0.1",
     "file-saver": "~2.0.5",
     "diff": "~5.0.0",
-    "@ng-select/ng-select": "~9.1.0",
-    "@swimlane/ngx-charts": "~20.1.0",
+    "@ng-select/ng-select": "~10.0.1",
+    "@stoick/ngx-15-charts": "~21.0.0",
     "echarts": "~5.3.2",
-    "ngx-echarts": "~8.0.1"
+    "ngx-echarts": "~8.0.1",
+    "@angular/animations": "^15.2.9",
+    "@angular/cdk": "^15.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.11",
-    "@angular/cli": "^14.2.11",
-    "@angular/compiler-cli": "^14.3.0",
+    "@angular-devkit/build-angular": "^15.2.8",
+    "@angular/cli": "^15.2.8",
+    "@angular/compiler-cli": "^15.2.9",
     "@types/diff": "~5.0.2",
     "@types/node": "~17.0.34",
     "@typescript-eslint/eslint-plugin": "~5.25.0",
@@ -49,6 +51,6 @@
     "eslint-plugin-prefer-arrow": "~1.2.3",
     "ts-node": "~10.7.0",
     "tslint": "~6.1.3",
-    "typescript": "~4.6.4"
+    "typescript": "~4.9.5"
   }
 }
