--- a/src/PublicAdmin/package.json
+++ b/src/PublicAdmin/package.json
@@ -31,17 +31,17 @@
     "@angular-devkit/build-angular": "^15.2.8",
     "@angular/cli": "^15.2.8",
     "@angular/compiler-cli": "^15.2.9",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
-    "codelyzer": "^6.0.0",
-    "eslint": "^8.36.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsdoc": "^40.1.0",
-    "eslint-plugin-prefer-arrow": "^1.2.3",
-    "ts-node": "~8.3.0",
+    "@types/node": "~20.2.5",
+    "@typescript-eslint/eslint-plugin": "~5.59.8",
+    "@typescript-eslint/eslint-plugin-tslint": "~5.59.8",
+    "@typescript-eslint/parser": "~5.59.8",
+    "codelyzer": "^6.0.2",
+    "eslint": "~8.41.0",
+    "eslint-plugin-import": "~2.27.5",
+    "eslint-plugin-jsdoc": "~46.0.0",
+    "eslint-plugin-prefer-arrow": "~1.2.3",
+    "ts-node": "~10.9.1",
     "tslint": "~6.1.3",
-    "typescript": "~4.8.4"
+    "typescript": "~4.9.5"
   }
 }
