PublicAdmin: Pin presentation

--- a/src/PublicAdmin/angular.json
+++ b/src/PublicAdmin/angular.json
@@ -61,7 +61,8 @@
                         "namedChunks": true,
                         "allowedCommonJsDependencies": [
                             "jwt-decode",
-                            "moment"
+                            "moment",
+                            "file-saver"
                         ]
                     },
                     "configurations": {
