--- a/src/PublicAdmin/package.json
+++ b/src/PublicAdmin/package.json
@@ -25,7 +25,8 @@
     "jwt-decode": "~3.1.2",
     "moment": "~2.29.4",
     "bootstrap": "5.2.3",
-    "@ng-select/ng-select": "10.0.4"
+    "@ng-select/ng-select": "10.0.4",
+    "file-saver": "~2.0.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.8",
