--- a/src/AdminWeb/package.json
+++ b/src/AdminWeb/package.json
@@ -24,6 +24,8 @@
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-angular": "~5.2.17",
     "@popperjs/core": "~2.11.8",
+    "ag-grid-angular": "^32.2.0",
+    "ag-grid-community": "^32.2.0",
     "bootstrap": "^5.3.3",
     "moment": "^2.30.1",
     "ngx-filesize": "^3.0.4",
