--- a/src/AdminWeb/package.json
+++ b/src/AdminWeb/package.json
@@ -27,8 +27,8 @@
     "ag-grid-angular": "^32.2.0",
     "ag-grid-community": "^32.2.0",
     "bootstrap": "^5.3.3",
-    "moment": "^2.30.1",
-    "ngx-filesize": "^3.0.4",
+    "filesize": "^10.1.6",
+    "luxon": "^3.5.0",
     "ngx-scrollbar": "^15.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -38,13 +38,7 @@
     "@angular-devkit/build-angular": "^18.2.3",
     "@angular/cli": "^18.2.3",
     "@angular/compiler-cli": "^18.2.0",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.2.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "@types/luxon": "^3.4.2",
     "prettier": "^3.3.3",
     "typescript": "~5.5.2"
   }
