--- a/src/AdminWeb/package.json
+++ b/src/AdminWeb/package.json
@@ -26,6 +26,7 @@
     "@popperjs/core": "~2.11.8",
     "ag-grid-angular": "^32.2.0",
     "ag-grid-community": "^32.2.0",
+    "@ag-grid-community/locale": "^32.2.1",
     "bootstrap": "^5.3.3",
     "filesize": "^10.1.6",
     "luxon": "^3.5.0",
