--- a/src/AdminWeb/angular.json
+++ b/src/AdminWeb/angular.json
@@ -102,7 +102,11 @@
           "options": {
             "ssl": true,
             "sslKey": "localhost.key",
-            "sslCert": "localhost.crt"
+            "sslCert": "localhost.crt",
+            "headers": {
+              "Cache-Control": "no-cache",
+              "expires": "0"
+            }
           }
         },
         "extract-i18n": {
