--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
         with:
           context: src/AdminWeb
           push: true
-          tags: ghrc.io/grillbot/grillbot.web:admin_web
+          tags: ghcr.io/grillbot/grillbot.web:admin_web
   AdminWeb_Production:
     runs-on: ubuntu-latest
     environment: Production_AdminWeb
