Bug fixes and points transaction list

--- a/src/AdminWeb/package.json
+++ b/src/AdminWeb/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@ag-grid-community/locale": "^32.2.1",
     "@angular/animations": "^18.2.0",
     "@angular/cdk": "^18.2.0",
     "@angular/common": "^18.2.0",
@@ -24,10 +25,10 @@
     "@coreui/coreui": "^5.1.2",
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-angular": "~5.2.17",
+    "@ng-select/ng-select": "^13.9.0",
     "@popperjs/core": "~2.11.8",
     "ag-grid-angular": "^32.2.0",
     "ag-grid-community": "^32.2.0",
-    "@ag-grid-community/locale": "^32.2.1",
     "bootstrap": "^5.3.3",
     "filesize": "^10.1.6",
     "luxon": "^3.5.0",
