--- a/src/AdminWeb/package.json
+++ b/src/AdminWeb/package.json
@@ -25,6 +25,7 @@
     "@coreui/coreui": "^5.1.2",
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-angular": "~5.2.17",
+    "@ng-select/ng-option-highlight": "^13.9.0",
     "@ng-select/ng-select": "^13.9.0",
     "@popperjs/core": "~2.11.8",
     "ag-grid-angular": "^32.2.0",
