--- a/src/AdminWeb/package.json
+++ b/src/AdminWeb/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@coreui/angular": "~5.2.17",
+    "@coreui/angular-chartjs": "5.2",
+    "@coreui/chartjs": "^4.0.0",
     "@coreui/coreui": "^5.1.2",
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-angular": "~5.2.17",
@@ -31,6 +33,7 @@
     "ag-grid-angular": "^32.2.0",
     "ag-grid-community": "^32.2.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.5",
     "filesize": "^10.1.6",
     "luxon": "^3.5.0",
     "ngx-scrollbar": "^15.1.3",
