--- a/src/AdminWeb/package.json
+++ b/src/AdminWeb/package.json
@@ -37,6 +37,7 @@
     "filesize": "^10.1.6",
     "luxon": "^3.5.0",
     "ngx-scrollbar": "^15.1.3",
+    "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "typescript-extended-linq": "^4.1.0",
