--- a/src/AdminWeb/package.json
+++ b/src/AdminWeb/package.json
@@ -11,45 +11,45 @@
   },
   "private": true,
   "dependencies": {
-    "@ag-grid-community/locale": "^32.2.1",
-    "@angular/animations": "^18.2.0",
-    "@angular/cdk": "^18.2.0",
-    "@angular/common": "^18.2.0",
-    "@angular/compiler": "^18.2.0",
-    "@angular/core": "^18.2.0",
-    "@angular/forms": "^18.2.0",
-    "@angular/platform-browser": "^18.2.0",
-    "@angular/platform-browser-dynamic": "^18.2.0",
-    "@angular/router": "^18.2.0",
-    "@coreui/angular": "~5.2.17",
-    "@coreui/angular-chartjs": "5.2",
+    "@ag-grid-community/locale": "^34.2.0",
+    "@angular/animations": "^20.3.0",
+    "@angular/cdk": "^20.2.3",
+    "@angular/common": "^20.3.0",
+    "@angular/compiler": "^20.3.0",
+    "@angular/core": "^20.3.0",
+    "@angular/forms": "^20.3.0",
+    "@angular/platform-browser": "^20.3.0",
+    "@angular/platform-browser-dynamic": "^20.3.0",
+    "@angular/router": "^20.3.0",
+    "@coreui/angular": "~5.5.12",
+    "@coreui/angular-chartjs": "^5.5.12",
     "@coreui/chartjs": "^4.0.0",
-    "@coreui/coreui": "^5.1.2",
+    "@coreui/coreui": "^5.4.3",
     "@coreui/icons": "^3.0.1",
-    "@coreui/icons-angular": "~5.2.17",
-    "@ng-select/ng-option-highlight": "^13.9.0",
-    "@ng-select/ng-select": "^13.9.0",
-    "@popperjs/core": "~2.11.8",
-    "ag-grid-angular": "^32.2.0",
-    "ag-grid-community": "^32.2.0",
-    "bootstrap": "^5.3.3",
-    "chart.js": "^4.4.5",
-    "filesize": "^10.1.6",
-    "luxon": "^3.5.0",
-    "ngx-scrollbar": "^15.1.3",
-    "primeng": "^17.18.11",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.10",
-    "diff": "^7.0.0"
+    "@coreui/icons-angular": "^5.5.12",
+    "@ng-select/ng-option-highlight": "^15.1.3",
+    "@ng-select/ng-select": "^15.1.3",
+    "@popperjs/core": "^2.11.8",
+    "ag-grid-angular": "^34.2.0",
+    "ag-grid-community": "^34.2.0",
+    "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.0",
+    "filesize": "^11.0.2",
+    "luxon": "^3.7.2",
+    "ngx-scrollbar": "^18.0.0",
+    "primeng": "^20.1.2",
+    "@primeuix/themes": "^1.2.3",
+    "rxjs": "^7.8.2",
+    "tslib": "^2.8.1",
+    "zone.js": "^0.15.1",
+    "diff": "^8.0.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.3",
-    "@angular/cli": "^18.2.3",
-    "@angular/compiler-cli": "^18.2.0",
-    "@types/luxon": "^3.4.2",
-    "prettier": "^3.3.3",
-    "typescript": "~5.5.2",
-    "@types/diff": "^7.0.1"
+    "@angular-devkit/build-angular": "^20.3.1",
+    "@angular/cli": "^20.3.1",
+    "@angular/compiler-cli": "^20.3.0",
+    "@types/luxon": "^3.7.1",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.2"
   }
 }
