--- a/src/AdminWeb/nginx.conf
+++ b/src/AdminWeb/nginx.conf
@@ -42,6 +42,10 @@ http {
             return 403;
         }
 
+        location ~ /\.(git|svn|ht|DS_Store) {
+            deny all;
+        }
+
         location /.env {
             return 403;
         }
